--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^3.12.1",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "d3": "^7.1.1",
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "html-webpack-plugin": "^5.3.1",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@types/d3": "^7.0.0",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
