--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "JetLu",
   "license": "MIT",
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@ant-design/icons": "^4.6.4",
     "@babel/core": "^7.14.0",
     "@babel/plugin-transform-runtime": "^7.13.15",
@@ -24,7 +25,6 @@
     "core-js": "^3.12.1",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
-    "d3": "^7.1.1",
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "html-webpack-plugin": "^5.3.1",
@@ -41,7 +41,6 @@
     "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0"
   },
   "devDependencies": {
@@ -52,6 +51,7 @@
     "@types/react-router-dom": "^5.1.7",
     "babel-plugin-import": "^1.13.3",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "webpack": "^5.58.0",
     "webpack-dev-server": "^4.2.1"
   }
 }
