--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env env=dev",
+    "start:mock": "webpack serve --env env=mock",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JetLu",
@@ -20,7 +21,7 @@
     "@babel/runtime-corejs3": "^7.14.0",
     "antd": "^4.16.13",
     "autoprefixer": "^10.2.5",
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.2",
     "core-js": "^3.12.1",
     "css-loader": "^6.2.0",
@@ -35,9 +36,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
     "style-loader": "^3.2.1",
-    "stylelint-config-standard": "^22.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
@@ -45,7 +46,6 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
-    "@types/d3": "^7.0.0",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
