--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "html-webpack-plugin": "^5.3.1",
+    "jszip": "^3.7.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.3.0",
