--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env env=dev",
-    "start:mock": "webpack serve --env env=mock",
+    "build": "npm run clean && webpack --env env=prod",
+    "clean": "rm -fr dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JetLu",
